--- a/src/main/java/io/github/taills/webb/ui/ShellSetting.form
+++ b/src/main/java/io/github/taills/webb/ui/ShellSetting.form
@@ -387,14 +387,31 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="74d72" binding="requestPanel" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <grid id="74d72" binding="requestPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <scrollpane id="cb85e" class="org.fife.ui.rtextarea.RTextScrollPane" binding="requestTextScrollPane" custom-create="true">
+                    <constraints border-constraint="Center"/>
+                    <properties>
+                      <iconRowHeaderEnabled value="false"/>
+                      <lineNumbersEnabled value="true"/>
+                      <verticalScrollBarPolicy value="20"/>
+                    </properties>
+                    <border type="none"/>
+                    <children>
+                      <component id="a52ca" class="org.fife.ui.rsyntaxtextarea.RSyntaxTextArea" binding="requestTextArea" custom-create="true">
+                        <constraints/>
+                        <properties>
+                          <paintTabLines value="false"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </scrollpane>
+                </children>
               </grid>
             </children>
           </grid>
