--- a/src/main/java/io/github/taills/webb/ui/ShellSetting.form
+++ b/src/main/java/io/github/taills/webb/ui/ShellSetting.form
@@ -11,7 +11,7 @@
       <tabbedpane id="cd8e8" binding="tabbedPane1" default-binding="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="400" height="400"/>
+            <preferred-size width="350" height="420"/>
           </grid>
         </constraints>
         <properties/>
@@ -20,41 +20,11 @@
           <grid id="b74e7" layout-manager="GridLayoutManager" row-count="11" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <tabbedpane title="基础配置"/>
+              <tabbedpane title="General"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="f027b" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-                <border type="none"/>
-                <children>
-                  <component id="8ad0e" class="javax.swing.JLabel">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="50" height="-1"/>
-                      </grid>
-                    </constraints>
-                    <properties>
-                      <enabled value="true"/>
-                      <horizontalAlignment value="4"/>
-                      <text value="URL"/>
-                    </properties>
-                  </component>
-                  <component id="7b157" class="javax.swing.JTextField" binding="textField3" default-binding="true">
-                    <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
-                      </grid>
-                    </constraints>
-                    <properties/>
-                  </component>
-                </children>
-              </grid>
               <grid id="ce2b0" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
@@ -74,12 +44,12 @@
                   <component id="7566e" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="50" height="-1"/>
+                        <preferred-size width="120" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
                       <horizontalAlignment value="4"/>
-                      <text value="密码"/>
+                      <text value="Password"/>
                     </properties>
                   </component>
                 </children>
@@ -103,12 +73,12 @@
                   <component id="44dc7" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="50" height="-1"/>
+                        <preferred-size width="120" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
                       <horizontalAlignment value="4"/>
-                      <text value="密钥"/>
+                      <text value="Key"/>
                     </properties>
                   </component>
                 </children>
@@ -132,12 +102,12 @@
                   <component id="5e0c2" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="50" height="-1"/>
+                        <preferred-size width="120" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
                       <horizontalAlignment value="4"/>
-                      <text value="连接超时"/>
+                      <text value="Connecting Timeout"/>
                     </properties>
                   </component>
                 </children>
@@ -161,12 +131,12 @@
                   <component id="ad40" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="50" height="-1"/>
+                        <preferred-size width="120" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
                       <horizontalAlignment value="4"/>
-                      <text value="读取超时"/>
+                      <text value="Reading Timeout"/>
                     </properties>
                   </component>
                 </children>
@@ -182,12 +152,12 @@
                   <component id="e05d5" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="50" height="-1"/>
+                        <preferred-size width="120" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
                       <horizontalAlignment value="4"/>
-                      <text value="代理"/>
+                      <text value="Proxy"/>
                     </properties>
                   </component>
                   <component id="56f1e" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
@@ -211,12 +181,12 @@
                   <component id="b9d50" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="50" height="-1"/>
+                        <preferred-size width="120" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
                       <horizontalAlignment value="4"/>
-                      <text value="标签"/>
+                      <text value="Tag"/>
                     </properties>
                   </component>
                   <component id="92539" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
@@ -248,12 +218,12 @@
                   <component id="51181" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="50" height="-1"/>
+                        <preferred-size width="120" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
                       <horizontalAlignment value="4"/>
-                      <text value="备注"/>
+                      <text value="Remark"/>
                     </properties>
                   </component>
                 </children>
@@ -269,12 +239,12 @@
                   <component id="518d7" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="50" height="-1"/>
+                        <preferred-size width="120" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
                       <horizontalAlignment value="4"/>
-                      <text value="有效载荷"/>
+                      <text value="Payload"/>
                     </properties>
                   </component>
                   <component id="48add" class="javax.swing.JComboBox" binding="comboBox3" default-binding="true">
@@ -296,12 +266,12 @@
                   <component id="75a23" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="50" height="-1"/>
+                        <preferred-size width="120" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
                       <horizontalAlignment value="4"/>
-                      <text value="加密器"/>
+                      <text value="Encryptor"/>
                     </properties>
                   </component>
                   <component id="96673" class="javax.swing.JComboBox" binding="comboBox4" default-binding="true">
@@ -323,12 +293,12 @@
                   <component id="1606a" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="50" height="-1"/>
+                        <preferred-size width="120" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
                       <horizontalAlignment value="4"/>
-                      <text value="编码"/>
+                      <text value="Encoding"/>
                     </properties>
                   </component>
                   <component id="df127" class="javax.swing.JComboBox" binding="comboBox5" default-binding="true">
@@ -347,20 +317,20 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="6f047" class="javax.swing.JButton" binding="button1" default-binding="true">
+                      <component id="6f047" class="javax.swing.JButton" binding="oKButton">
                         <constraints>
                           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="Button"/>
+                          <text value="OK"/>
                         </properties>
                       </component>
-                      <component id="ad10d" class="javax.swing.JButton" binding="button2" default-binding="true">
+                      <component id="ad10d" class="javax.swing.JButton" binding="testButton" default-binding="true">
                         <constraints>
                           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="Button"/>
+                          <text value="Test"/>
                         </properties>
                       </component>
                       <hspacer id="d9b4d">
@@ -377,41 +347,52 @@
                   </grid>
                 </children>
               </grid>
-            </children>
-          </grid>
-          <grid id="edd8d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <tabbedpane title="请求配置"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <grid id="74d72" binding="requestPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+              <grid id="37c01" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <scrollpane id="cb85e" class="org.fife.ui.rtextarea.RTextScrollPane" binding="requestTextScrollPane" custom-create="true">
-                    <constraints border-constraint="Center"/>
+                  <component id="790e6" class="javax.swing.JTextField" default-binding="true">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <component id="ad603" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                        <preferred-size width="120" height="-1"/>
+                      </grid>
+                    </constraints>
                     <properties>
-                      <iconRowHeaderEnabled value="false"/>
-                      <lineNumbersEnabled value="true"/>
-                      <verticalScrollBarPolicy value="20"/>
+                      <horizontalAlignment value="4"/>
+                      <text value="URL"/>
                     </properties>
-                    <border type="none"/>
-                    <children>
-                      <component id="a52ca" class="org.fife.ui.rsyntaxtextarea.RSyntaxTextArea" binding="requestTextArea" custom-create="true">
-                        <constraints/>
-                        <properties>
-                          <paintTabLines value="false"/>
-                        </properties>
-                      </component>
-                    </children>
-                  </scrollpane>
+                  </component>
                 </children>
+              </grid>
+            </children>
+          </grid>
+          <grid id="edd8d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Request Header"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <grid id="74d72" binding="requestHeaderPanel" custom-create="true" layout-manager="BorderLayout" hgap="0" vgap="0">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children/>
               </grid>
             </children>
           </grid>
