从哥斯拉搬过来的基础框架

--- a/src/main/java/io/github/taills/webb/ui/ShellManager.form
+++ b/src/main/java/io/github/taills/webb/ui/ShellManager.form
@@ -32,7 +32,8 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="你好世界"/>
+                  <text value=""/>
+                  <toolTipText value="Search Tag"/>
                 </properties>
               </component>
               <scrollpane id="2883c" binding="scrollPaneTags">
